--- a/Kira/src/main/resources/application.properties
+++ b/Kira/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/kira
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.datasource.driver-clsaa-name=com.mysql.jdbc.Driver
 spring.jpa.datasbase-platfirm=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
